; ModuleID = '/home/carl/AnghaBench/zfs/module/lua/extr_llex.c_llex.c'
source_filename = "/home/carl/AnghaBench/zfs/module/lua/extr_llex.c_llex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_26__ = type { i32, i32 }
%struct.TYPE_25__ = type { %struct.TYPE_24__* }
%struct.TYPE_24__ = type { %struct.TYPE_23__ }
%struct.TYPE_23__ = type { i32 }

@TK_STRING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"invalid long string delimiter\00", align 1
@TK_EQ = common dso_local global i32 0, align 4
@TK_LE = common dso_local global i32 0, align 4
@TK_GE = common dso_local global i32 0, align 4
@TK_NE = common dso_local global i32 0, align 4
@TK_DBCOLON = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c".\00", align 1
@TK_DOTS = common dso_local global i32 0, align 4
@TK_CONCAT = common dso_local global i32 0, align 4
@TK_NUMBER = common dso_local global i32 0, align 4
@TK_EOS = common dso_local global i32 0, align 4
@FIRST_RESERVED = common dso_local global i32 0, align 4
@TK_NAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_26__*, %struct.TYPE_25__*)* @llex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @llex(%struct.TYPE_26__* %0, %struct.TYPE_25__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_26__*, align 8
  %5 = alloca %struct.TYPE_25__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_24__*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_26__* %0, %struct.TYPE_26__** %4, align 8
  store %struct.TYPE_25__* %1, %struct.TYPE_25__** %5, align 8
  %10 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @luaZ_resetbuffer(i32 %12)
  br label %14

14:                                               ; preds = %244, %2
  %15 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  switch i32 %17, label %192 [
    i32 10, label %18
    i32 13, label %18
    i32 32, label %21
    i32 12, label %21
    i32 9, label %21
    i32 11, label %21
    i32 45, label %24
    i32 91, label %73
    i32 61, label %92
    i32 60, label %104
    i32 62, label %116
    i32 126, label %128
    i32 58, label %140
    i32 34, label %152
    i32 39, label %152
    i32 46, label %161
    i32 48, label %185
    i32 49, label %185
    i32 50, label %185
    i32 51, label %185
    i32 52, label %185
    i32 53, label %185
    i32 54, label %185
    i32 55, label %185
    i32 56, label %185
    i32 57, label %185
    i32 128, label %190
  ]

18:                                               ; preds = %14, %14
  %19 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %20 = call i32 @inclinenumber(%struct.TYPE_26__* %19)
  br label %244

21:                                               ; preds = %14, %14, %14, %14
  %22 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %23 = call i32 @next(%struct.TYPE_26__* %22)
  br label %244

24:                                               ; preds = %14
  %25 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %26 = call i32 @next(%struct.TYPE_26__* %25)
  %27 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = icmp ne i32 %29, 45
  br i1 %30, label %31, label %32

31:                                               ; preds = %24
  store i32 45, i32* %3, align 4
  br label %245

32:                                               ; preds = %24
  %33 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %34 = call i32 @next(%struct.TYPE_26__* %33)
  %35 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = icmp eq i32 %37, 91
  br i1 %38, label %39, label %57

39:                                               ; preds = %32
  %40 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %41 = call i32 @skip_sep(%struct.TYPE_26__* %40)
  store i32 %41, i32* %6, align 4
  %42 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %43 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @luaZ_resetbuffer(i32 %44)
  %46 = load i32, i32* %6, align 4
  %47 = icmp sge i32 %46, 0
  br i1 %47, label %48, label %56

48:                                               ; preds = %39
  %49 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %50 = load i32, i32* %6, align 4
  %51 = call i32 @read_long_string(%struct.TYPE_26__* %49, %struct.TYPE_25__* null, i32 %50)
  %52 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %53 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @luaZ_resetbuffer(i32 %54)
  br label %244

56:                                               ; preds = %39
  br label %57

57:                                               ; preds = %56, %32
  br label %58

58:                                               ; preds = %69, %57
  %59 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %60 = call i32 @currIsNewline(%struct.TYPE_26__* %59)
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %67, label %62

62:                                               ; preds = %58
  %63 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %64 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %63, i32 0, i32 0
  %65 = load i32, i32* %64, align 4
  %66 = icmp ne i32 %65, 128
  br label %67

67:                                               ; preds = %62, %58
  %68 = phi i1 [ false, %58 ], [ %66, %62 ]
  br i1 %68, label %69, label %72

69:                                               ; preds = %67
  %70 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %71 = call i32 @next(%struct.TYPE_26__* %70)
  br label %58

72:                                               ; preds = %67
  br label %244

73:                                               ; preds = %14
  %74 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %75 = call i32 @skip_sep(%struct.TYPE_26__* %74)
  store i32 %75, i32* %7, align 4
  %76 = load i32, i32* %7, align 4
  %77 = icmp sge i32 %76, 0
  br i1 %77, label %78, label %84

78:                                               ; preds = %73
  %79 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %80 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %81 = load i32, i32* %7, align 4
  %82 = call i32 @read_long_string(%struct.TYPE_26__* %79, %struct.TYPE_25__* %80, i32 %81)
  %83 = load i32, i32* @TK_STRING, align 4
  store i32 %83, i32* %3, align 4
  br label %245

84:                                               ; preds = %73
  %85 = load i32, i32* %7, align 4
  %86 = icmp eq i32 %85, -1
  br i1 %86, label %87, label %88

87:                                               ; preds = %84
  store i32 91, i32* %3, align 4
  br label %245

88:                                               ; preds = %84
  %89 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %90 = load i32, i32* @TK_STRING, align 4
  %91 = call i32 @lexerror(%struct.TYPE_26__* %89, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %90)
  br label %244

92:                                               ; preds = %14
  %93 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %94 = call i32 @next(%struct.TYPE_26__* %93)
  %95 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %96 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %95, i32 0, i32 0
  %97 = load i32, i32* %96, align 4
  %98 = icmp ne i32 %97, 61
  br i1 %98, label %99, label %100

99:                                               ; preds = %92
  store i32 61, i32* %3, align 4
  br label %245

100:                                              ; preds = %92
  %101 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %102 = call i32 @next(%struct.TYPE_26__* %101)
  %103 = load i32, i32* @TK_EQ, align 4
  store i32 %103, i32* %3, align 4
  br label %245

104:                                              ; preds = %14
  %105 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %106 = call i32 @next(%struct.TYPE_26__* %105)
  %107 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %108 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %107, i32 0, i32 0
  %109 = load i32, i32* %108, align 4
  %110 = icmp ne i32 %109, 61
  br i1 %110, label %111, label %112

111:                                              ; preds = %104
  store i32 60, i32* %3, align 4
  br label %245

112:                                              ; preds = %104
  %113 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %114 = call i32 @next(%struct.TYPE_26__* %113)
  %115 = load i32, i32* @TK_LE, align 4
  store i32 %115, i32* %3, align 4
  br label %245

116:                                              ; preds = %14
  %117 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %118 = call i32 @next(%struct.TYPE_26__* %117)
  %119 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %120 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %119, i32 0, i32 0
  %121 = load i32, i32* %120, align 4
  %122 = icmp ne i32 %121, 61
  br i1 %122, label %123, label %124

123:                                              ; preds = %116
  store i32 62, i32* %3, align 4
  br label %245

124:                                              ; preds = %116
  %125 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %126 = call i32 @next(%struct.TYPE_26__* %125)
  %127 = load i32, i32* @TK_GE, align 4
  store i32 %127, i32* %3, align 4
  br label %245

128:                                              ; preds = %14
  %129 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %130 = call i32 @next(%struct.TYPE_26__* %129)
  %131 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %132 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %131, i32 0, i32 0
  %133 = load i32, i32* %132, align 4
  %134 = icmp ne i32 %133, 61
  br i1 %134, label %135, label %136

135:                                              ; preds = %128
  store i32 126, i32* %3, align 4
  br label %245

136:                                              ; preds = %128
  %137 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %138 = call i32 @next(%struct.TYPE_26__* %137)
  %139 = load i32, i32* @TK_NE, align 4
  store i32 %139, i32* %3, align 4
  br label %245

140:                                              ; preds = %14
  %141 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %142 = call i32 @next(%struct.TYPE_26__* %141)
  %143 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %144 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %143, i32 0, i32 0
  %145 = load i32, i32* %144, align 4
  %146 = icmp ne i32 %145, 58
  br i1 %146, label %147, label %148

147:                                              ; preds = %140
  store i32 58, i32* %3, align 4
  br label %245

148:                                              ; preds = %140
  %149 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %150 = call i32 @next(%struct.TYPE_26__* %149)
  %151 = load i32, i32* @TK_DBCOLON, align 4
  store i32 %151, i32* %3, align 4
  br label %245

152:                                              ; preds = %14, %14
  %153 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %154 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %155 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %154, i32 0, i32 0
  %156 = load i32, i32* %155, align 4
  %157 = trunc i32 %156 to i8
  %158 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %159 = call i32 @read_string(%struct.TYPE_26__* %153, i8 signext %157, %struct.TYPE_25__* %158)
  %160 = load i32, i32* @TK_STRING, align 4
  store i32 %160, i32* %3, align 4
  br label %245

161:                                              ; preds = %14
  %162 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %163 = call i32 @save_and_next(%struct.TYPE_26__* %162)
  %164 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %165 = call i32 @check_next(%struct.TYPE_26__* %164, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %166 = icmp ne i32 %165, 0
  br i1 %166, label %167, label %175

167:                                              ; preds = %161
  %168 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %169 = call i32 @check_next(%struct.TYPE_26__* %168, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %170 = icmp ne i32 %169, 0
  br i1 %170, label %171, label %173

171:                                              ; preds = %167
  %172 = load i32, i32* @TK_DOTS, align 4
  store i32 %172, i32* %3, align 4
  br label %245

173:                                              ; preds = %167
  %174 = load i32, i32* @TK_CONCAT, align 4
  store i32 %174, i32* %3, align 4
  br label %245

175:                                              ; preds = %161
  %176 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %177 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %176, i32 0, i32 0
  %178 = load i32, i32* %177, align 4
  %179 = trunc i32 %178 to i8
  %180 = call i32 @lisdigit(i8 signext %179)
  %181 = icmp ne i32 %180, 0
  br i1 %181, label %183, label %182

182:                                              ; preds = %175
  store i32 46, i32* %3, align 4
  br label %245

183:                                              ; preds = %175
  br label %184

184:                                              ; preds = %183
  br label %185

185:                                              ; preds = %14, %14, %14, %14, %14, %14, %14, %14, %14, %14, %184
  %186 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %187 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %188 = call i32 @read_numeral(%struct.TYPE_26__* %186, %struct.TYPE_25__* %187)
  %189 = load i32, i32* @TK_NUMBER, align 4
  store i32 %189, i32* %3, align 4
  br label %245

190:                                              ; preds = %14
  %191 = load i32, i32* @TK_EOS, align 4
  store i32 %191, i32* %3, align 4
  br label %245

192:                                              ; preds = %14
  %193 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %194 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %193, i32 0, i32 0
  %195 = load i32, i32* %194, align 4
  %196 = trunc i32 %195 to i8
  %197 = call i32 @lislalpha(i8 signext %196)
  %198 = icmp ne i32 %197, 0
  br i1 %198, label %199, label %237

199:                                              ; preds = %192
  br label %200

200:                                              ; preds = %203, %199
  %201 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %202 = call i32 @save_and_next(%struct.TYPE_26__* %201)
  br label %203

203:                                              ; preds = %200
  %204 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %205 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %204, i32 0, i32 0
  %206 = load i32, i32* %205, align 4
  %207 = trunc i32 %206 to i8
  %208 = call i32 @lislalnum(i8 signext %207)
  %209 = icmp ne i32 %208, 0
  br i1 %209, label %200, label %210

210:                                              ; preds = %203
  %211 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %212 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %213 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %212, i32 0, i32 1
  %214 = load i32, i32* %213, align 4
  %215 = call i32 @luaZ_buffer(i32 %214)
  %216 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %217 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %216, i32 0, i32 1
  %218 = load i32, i32* %217, align 4
  %219 = call i32 @luaZ_bufflen(i32 %218)
  %220 = call %struct.TYPE_24__* @luaX_newstring(%struct.TYPE_26__* %211, i32 %215, i32 %219)
  store %struct.TYPE_24__* %220, %struct.TYPE_24__** %8, align 8
  %221 = load %struct.TYPE_24__*, %struct.TYPE_24__** %8, align 8
  %222 = load %struct.TYPE_25__*, %struct.TYPE_25__** %5, align 8
  %223 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %222, i32 0, i32 0
  store %struct.TYPE_24__* %221, %struct.TYPE_24__** %223, align 8
  %224 = load %struct.TYPE_24__*, %struct.TYPE_24__** %8, align 8
  %225 = call i32 @isreserved(%struct.TYPE_24__* %224)
  %226 = icmp ne i32 %225, 0
  br i1 %226, label %227, label %235

227:                                              ; preds = %210
  %228 = load %struct.TYPE_24__*, %struct.TYPE_24__** %8, align 8
  %229 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %228, i32 0, i32 0
  %230 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %229, i32 0, i32 0
  %231 = load i32, i32* %230, align 4
  %232 = sub nsw i32 %231, 1
  %233 = load i32, i32* @FIRST_RESERVED, align 4
  %234 = add nsw i32 %232, %233
  store i32 %234, i32* %3, align 4
  br label %245

235:                                              ; preds = %210
  %236 = load i32, i32* @TK_NAME, align 4
  store i32 %236, i32* %3, align 4
  br label %245

237:                                              ; preds = %192
  %238 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %239 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %238, i32 0, i32 0
  %240 = load i32, i32* %239, align 4
  store i32 %240, i32* %9, align 4
  %241 = load %struct.TYPE_26__*, %struct.TYPE_26__** %4, align 8
  %242 = call i32 @next(%struct.TYPE_26__* %241)
  %243 = load i32, i32* %9, align 4
  store i32 %243, i32* %3, align 4
  br label %245

244:                                              ; preds = %88, %72, %48, %21, %18
  br label %14

245:                                              ; preds = %237, %235, %227, %190, %185, %182, %173, %171, %152, %148, %147, %136, %135, %124, %123, %112, %111, %100, %99, %87, %78, %31
  %246 = load i32, i32* %3, align 4
  ret i32 %246
}

declare dso_local i32 @luaZ_resetbuffer(i32) #1

declare dso_local i32 @inclinenumber(%struct.TYPE_26__*) #1

declare dso_local i32 @next(%struct.TYPE_26__*) #1

declare dso_local i32 @skip_sep(%struct.TYPE_26__*) #1

declare dso_local i32 @read_long_string(%struct.TYPE_26__*, %struct.TYPE_25__*, i32) #1

declare dso_local i32 @currIsNewline(%struct.TYPE_26__*) #1

declare dso_local i32 @lexerror(%struct.TYPE_26__*, i8*, i32) #1

declare dso_local i32 @read_string(%struct.TYPE_26__*, i8 signext, %struct.TYPE_25__*) #1

declare dso_local i32 @save_and_next(%struct.TYPE_26__*) #1

declare dso_local i32 @check_next(%struct.TYPE_26__*, i8*) #1

declare dso_local i32 @lisdigit(i8 signext) #1

declare dso_local i32 @read_numeral(%struct.TYPE_26__*, %struct.TYPE_25__*) #1

declare dso_local i32 @lislalpha(i8 signext) #1

declare dso_local i32 @lislalnum(i8 signext) #1

declare dso_local %struct.TYPE_24__* @luaX_newstring(%struct.TYPE_26__*, i32, i32) #1

declare dso_local i32 @luaZ_buffer(i32) #1

declare dso_local i32 @luaZ_bufflen(i32) #1

declare dso_local i32 @isreserved(%struct.TYPE_24__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
